# fuchsia

boards/: rpi4.gni
boards/kernel_cmdline/: BUILD.gn
src/devices/bind/fuchsia.broadcom.platform/: fuchsia.broadcom.platform.bind
src/devices/board/: BUILD.gn
src/devices/board/drivers/: BUILD.gn
src/devices/board/drivers/rpi4/: BUILD.gn  bind-tests.json  rpi4-clock.cc  rpi4-display.cc  rpi4-gpio.cc  rpi4-mailbox.cc  rpi4-sysmem.cc  rpi4.bind  rpi4.cc  rpi4.h
src/devices/clock/: BUILD.gn
src/devices/clock/drivers/: BUILD.gn
src/devices/clock/drivers/bcm2835-clk/: BUILD.gn  bcm2835-clk-clk.cc  bcm2835-clk-const.h  bcm2835-clk-internal.h  bcm2835-clk-pll-div.cc  bcm2835-clk-pll.cc  bcm2835-clk.bind  bcm2835-clk.cc  bcm2835-clk.h  bind_tests.json  rpi-clk.cc
src/devices/gpio/: BUILD.gn
src/devices/gpio/drivers/: BUILD.gn
src/devices/gpio/drivers/bcm2835-gpio/: BUILD.gn  bcm2835-gpio.bind  bcm2835-gpio.cc  bcm2835-gpio.h  bind-tests.json
src/devices/internal/drivers/fragment/: BUILD.gn  fragment-proxy.cc  fragment-proxy.h  fragment.cc  fragment.h  proxy-protocol.h
src/devices/lib/broadcom/: BUILD.gn
src/devices/lib/broadcom/include/soc/broadcom/: bcm2711.h  bcm2835-clk.h  bcm2835-gpio.h  bcm2835-mailbox.h  rpi-clk.h  rpi-display.h  rpi-firmware.h
src/devices/scpi/: BUILD.gn
src/devices/scpi/drivers/rpi-mailbox/: BUILD.gn  rpi-mailbox-bind-test.json  rpi-mailbox.bind  rpi-mailbox.cc  rpi-mailbox.h
src/graphics/display/: BUILD.gn
src/graphics/display/drivers/: BUILD.gn
src/graphics/display/drivers/vc4-display/: BUILD.gn  bind_tests.json  vc4-display.bind  vc4-display.cc  vc4-display.h
src/lib/ddk/: BUILD.gn
zircon/system/ulib/ddk-platform-defs/include/ddk/: platform-defs.h
