# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//boards/arm64.gni")

board_name = "rpi4"

# depthcharge bootloader packaging
custom_signing_script =
    "//zircon/kernel/target/arm64/board/rpi4/package-image.sh"
custom_signing_script_deps = [ "//zircon/kernel/target/arm64/boot-shim:rpi4" ]

_common_bootfs_deps = [
  "//src/devices/board/drivers/rpi4",
  "//src/devices/gpio/drivers/bcm2835-gpio",
  "//src/devices/scpi/drivers/rpi-mailbox",
]

board_bootfs_labels += _common_bootfs_deps

board_zedboot_bootfs_labels += _common_bootfs_deps

board_recovery_bootfs_labels += _common_bootfs_deps

# serial console
board_zedboot_bootfs_labels += [ "//boards/kernel_cmdline:rpi4" ]
board_recovery_bootfs_labels += [ "//boards/kernel_cmdline:rpi4" ]
