# Copyright 2020 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("drivers") {
  testonly = true
  deps = [
    "drivers/aml-scpi-s912:aml-scpi-s912.mailbox",
    "drivers/aml-scpi-s912:scpi",
    "drivers/rpi-mailbox:rpi-mailbox",
  ]
}

group("tests") {
  testonly = true
  deps = [
    "drivers/aml-scpi-s912:tests",
    "drivers/rpi-mailbox:tests",
  ]
}
