# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/unification/zx_library.gni")

zx_library("broadcom") {
  sdk = "source"
  sdk_headers = [
    "soc/broadcom/bcm2711.h",
    "soc/broadcom/bcm2835-gpio.h",
    "soc/broadcom/bcm2835-mailbox.h",
    "soc/broadcom/rpi-firmware.h",
    "wifi/wifi-config.h"
  ]
  sources = []
}
