# Copyright 2021 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/bind/bind.gni")
import("//build/config/fuchsia/rules.gni")

bind_rules("rpi4-bind") {
  rules = "rpi4.bind"
  output = "rpi4-bind.h"
  tests = "bind-tests.json"
  deps = [
    "//src/devices/bind/fuchsia.broadcom.platform",
    "//src/devices/bind/fuchsia.platform",
  ]
}

group("tests") {
  testonly = true
  deps = [ ":rpi4-bind_test" ]
}

driver_module("rpi4") {
  configs += [
    "//build/config:all_source",
    "//build/config/fuchsia:enable_zircon_asserts",
  ]
  if (is_fuchsia) {
    configs += [ "//build/unification/config:zircon-migrated" ]
  }
  sources = [
    "rpi4.cc",
    "rpi4-clock.cc",
    "rpi4-gpio.cc",
    "rpi4-mailbox.cc",
  ]
  deps = [
    ":rpi4-bind",
    "//sdk/banjo/fuchsia.hardware.platform.bus",
    "//src/devices/lib/broadcom",
    "//src/devices/lib/driver",
    "//src/devices/lib/mmio",
    "//src/lib/ddk",
    "//src/lib/ddk:ddk-metadata",
    "//src/lib/ddktl",
  ]
}

