# Copyright 2021 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/bind/bind.gni")
import("//build/config/fuchsia/rules.gni")
import("//build/test.gni")
import("//src/sys/build/components.gni")

bind_rules("bcm2835-clk-bind") {
  rules = "bcm2835-clk.bind"
  output = "bcm2835-clk-bind.h"
  tests = "bind_tests.json"
  deps = [
    "//src/devices/bind/fuchsia.broadcom.platform",
    "//src/devices/bind/fuchsia.platform",
  ]
}

driver_module("bcm2835-clk") {
  configs += [
    "//build/config:all_source",
    "//build/config/fuchsia:enable_zircon_asserts",
  ]
  configs += [ "//build/unification/config:zircon-migrated" ]
  sources = [
    "bcm2835-clk.cc",
    "bcm2835-clk-pll.cc",
    "bcm2835-clk-pll-div.cc",
    "bcm2835-clk-clk.cc",
    "rpi-clk.cc",
  ]
  deps = [
    ":bcm2835-clk-bind",
    "//sdk/banjo/fuchsia.hardware.clock",
    "//sdk/banjo/fuchsia.hardware.clockimpl",
    "//sdk/banjo/fuchsia.hardware.mailbox",
    "//sdk/banjo/fuchsia.hardware.platform.bus",
    "//sdk/banjo/fuchsia.hardware.platform.device",
    "//src/devices/bus/lib/device-protocol-pdev",
    "//src/devices/lib/broadcom",
    "//src/devices/lib/driver",
    "//src/devices/lib/mmio",
    "//src/lib/ddk",
    "//src/lib/ddktl",
    "//zircon/public/lib/fbl",
    "//zircon/public/lib/hwreg",
    "//zircon/public/lib/zircon-internal",
    "//zircon/public/lib/zx",
  ]
}

group("tests") {
  testonly = true
  deps = [ ":bcm2835-clk-bind_test" ]
}
