# Copyright 2021 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/bind/bind.gni")
import("//build/config/fuchsia/rules.gni")

bind_rules("rpi-mailbox-bind") {
  rules = "rpi-mailbox.bind"
  output = "rpi-mailbox-bind.h"
  tests = "rpi-mailbox-bind-test.json"
  deps = [
    "//src/devices/bind/fuchsia.broadcom.platform",
    "//src/devices/bind/fuchsia.platform",
  ]
}

driver_module("rpi-mailbox") {
  configs += [
    "//build/config:all_source",
    "//build/config/fuchsia:enable_zircon_asserts",
  ]
  if (is_fuchsia) {
    configs += [ "//build/unification/config:zircon-migrated" ]
  }
  sources = [ "rpi-mailbox.cc" ]
  deps = [
    ":rpi-mailbox-bind",
    "//sdk/banjo/fuchsia.hardware.mailbox",
    "//sdk/banjo/fuchsia.hardware.platform.bus",
    "//src/devices/bus/lib/device-protocol-pdev",
    "//src/devices/bus/lib/device-protocol-platform-device",
    "//src/devices/lib/broadcom",
    "//src/devices/lib/driver",
    "//src/devices/lib/mmio",
    "//src/lib/ddk",
    "//src/lib/ddktl",
    "//zircon/public/lib/sync",
    "//zircon/public/lib/zx",
    "//zircon/system/ulib/zircon-internal",
  ]
}

group("tests") {
  testonly = true
  deps = [
    ":rpi-mailbox-bind_test",
  ]
}
